--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ flutter:
   uses-material-design: true
   assets:
     - images/lake.jpg
+    - images/logoB.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
