--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   english_words: ^3.1.0
+  auto_size_text: ^2.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
